--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-amplify": "^1.1.6",
-    "aws-amplify-react": "^2.0.7",
+    "aws-amplify": "^1.1.29",
+    "aws-amplify-react": "^2.3.9",
+    "aws-amplify-react-native": "^2.1.13",
     "bootstrap": "^4.1.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
