--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "aws-amplify": "^1.1.6",
     "aws-amplify-react": "^2.0.7",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.3.1",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
   },
